Re-written to include PDF
Also contains log formatter for logDNA, logging tool of choice

--- a/.env.template
+++ b/.env.template
@@ -1,9 +1,9 @@
 # SERVICE_NAME
 SERVICE_NAME=chrome-screenshot
-DESC=Takes screenshot of url, optional save to s3
+DESC=Takes screenshot of url
 
 # ENV is the environment where to deploy to. For instance: nonprod, dev, qa, prod, etc.
-ENV=prod
+ENV=dev
 
 # AWS creds to deploy
 AWS_ACCESS_KEY_ID
