--- a/package.json
+++ b/package.json
@@ -1,23 +1,49 @@
 {
     "name": "serverless-chrome-screenshot",
     "private": true,
-    "version": "0.1",
+    "version": "0.1.1",
     "description": "Takes screenshot of url, optional save to s3. Forked from https://github.com/adieuadieu/serverless-chrome/blob/develop/examples/serverless-framework/aws/",
-    "main": "src/handlers.js",
     "engines": {
-        "node": ">= 6.10.0"
-    },
-    "config": {
-        "jsSrc": "src/",
-        "chromiumChannel": "dev",
-        "chromium_channel": "dev"
+      "node": ">= 6.10.0"
     },
     "scripts": {
-        "test": "",
-        "lint": "npm run lint:eslint -s",
-        "lint:eslint": "eslint $npm_package_config_jsSrc",
-        "deploy": "serverless deploy -v",
-        "upgrade-dependencies": "yarn upgrade-interactive --latest --exact"
+        "test": "mocha --recursive --compilers js:babel-register test/**/*.spec.js",
+        "cover": "node_modules/.bin/babel-node node_modules/.bin/babel-istanbul cover  node_modules/.bin/_mocha -- test/**/*.spec.js"
+    },
+    "dependencies": {
+        "@vaya/logdna-formatter": "^0.1.0",
+        "analytics-node": "^3.3.0",
+        "babel": "^6.23.0",
+        "babel-loader": "^7.1.4",
+        "babel-plugin-transform-runtime": "^6.23.0",
+        "babel-preset-env": "^1.7.0",
+        "babel-preset-es2015": "^6.24.1",
+        "babel-register": "^6.24.1",
+        "babel-preset-stage-3": "6.24.1",
+        "chrome-remote-interface": "0.25.3",
+        "request": "^2.87.0",
+        "request-promise": "^4.2.2",
+        "serverless": "1.24.1",
+        "serverless-plugin-warmup": "^3.6.2-rc.1",
+        "serverless-plugin-chrome": "1.0.0-46",
+        "serverless-webpack": "^5.1.5",
+        "webpack": "^4.11.1",
+        "webpack-node-externals": "^1.7.2"
+    },
+    "devDependencies": {
+        "aws-sdk": "~2.249.1",
+        "aws-sdk-mock": "^4.0.0",
+        "babel-cli": "^6.26.0",
+        "babel-istanbul": "^0.12.2",
+        "babel-plugin-istanbul": "^4.1.6",
+        "chai": "^4.1.2",
+        "chai-as-promised": "^7.1.1",
+        "istanbul": "^0.3.17",
+        "lambda-tester": "~3.4.1",
+        "mocha": "^5.2.0",
+        "promisify-node": "^0.5.0",
+        "serverless-offline": "^3.16.0",
+        "sinon": "^2.3.8"
     },
     "repository": {
         "type": "git",
@@ -35,52 +61,10 @@
         "screen capture",
         "png"
     ],
-    "author": "Ryan Stockdale, forked from Marco Lüthy",
+    "author": "Ryan Stockdale",
     "license": "MIT",
     "bugs": {
         "url": "https://github.com/unitsix/serverless-chrome-screenshot/issues"
     },
-    "homepage": "https://github.com/unitsix/serverless-chrome-screenshot",
-    "dependencies": {
-        "chrome-remote-interface": "0.25.3",
-        "babel-core": "6.26.0",
-        "babel-loader": "7.1.2",
-        "babel-plugin-transform-object-entries": "1.0.0",
-        "babel-plugin-transform-object-rest-spread": "6.26.0",
-        "babel-preset-env": "1.6.1",
-        "babel-preset-stage-3": "6.24.1",
-        "babel-register": "6.26.0",
-        "serverless": "1.24.1",
-        "serverless-offline": "^3.16.0",
-        "serverless-plugin-chrome": "1.0.0-46",
-        "serverless-webpack": "4.0.0",
-        "webpack": "3.8.1"
-    },
-    "ava": {
-        "require": "babel-register",
-        "babel": "inherits"
-    },
-    "babel": {
-        "sourceMaps": true,
-        "presets": [
-            [
-                "env",
-                {
-                    "modules": "commonjs",
-                    "targets": {
-                        "node": "6.10"
-                    },
-                    "include": [
-                        "es7.object.values",
-                        "es7.object.entries"
-                    ]
-                }
-            ],
-            "stage-3"
-        ],
-        "plugins": [
-            "transform-object-rest-spread",
-            "transform-object-entries"
-        ]
-    }
+    "homepage": "https://github.com/unitsix/serverless-chrome-screenshot"
 }
